--- a/untitled2/06type.html
+++ b/untitled2/06type.html
@@ -38,10 +38,10 @@
 <hr />
 
 <div>
-    <div>good</div>
-    <div>nice</div>
-    <span>nice</span>
-    <span>net</span>
+    <div id="good">good</div>
+    <div id="nice">nice</div>
+    <span id="xml">nice</span>
+    <span id="net">net</span>
 
 </div>
 
