javaScript函数变量方法添加调用

--- a/untitled2/138functionObject.html
+++ b/untitled2/138functionObject.html
@@ -11,6 +11,7 @@
             return name + ",您好";
         }
 
+//        判断函数是否为Function的实例,是否为Object的实例
         alert("hello是否为function对象:"+（hello instanceof Function）+ "\nhello是否为object对象:"+(hello instanceof Object));
 
         alert(hello);
